[package]
name = "spore"
version = "0.1.0-alpha"
edition = "2021"
description = "Interprocess communication and filesystem services"

[lib]
name = "spore"
path = "src/lib.rs"

[dependencies]
winit = "0.25.0"
log = "0.4"
hyphae = { path = "../hyphae" }
serde_json = "1.0.72"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.51"
tungstenite = "0.16.0"
futures-util = "0.3.18"
futures = "0.3.18"
pollster = "0.2.4"
notify = "4.0.17"