[package]
name = "substrate"
version = "0.1.0"
edition = "2021"
description = "Audio/DSP module"

[lib]
name = "substrate"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.44"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.5"
rustfft = "6.0.1"
dasp_ring_buffer = "0.11.0"
spectrum-analyzer = "1.2.2"
cpal = "0.13.4"
itertools = "0.10.1"
hyphae = { path = "../hyphae" }
single_value_channel = "1.2.2"
libm = "0.2.1"